# space-weather

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: fetch_and_query.rs  parse_celestrak.rs
src/: centered_average.rs  lib.rs  python.rs  store.rs
src/fetch/: async_fetch.rs  blocking.rs  mod.rs
src/parsers/: celestrak.rs  mod.rs  set.rs
tests/: celestrak.rs  centered_average.rs  cross_validate.rs  fetch.rs  set.rs  types.rs
tests/fixtures/: DTCFILE.TXT  SOLFSMY.TXT  SW-All.csv  SW-Last5Years.csv
tests/python/: test_space_weather.py
