[package]
name = "space-weather"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
default = []
std = []
fetch = ["dep:reqwest", "std"]
fetch-blocking = ["fetch", "reqwest/blocking"]
python = ["std", "dep:pyo3", "dep:numpy"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
numpy = { version = "0.24", optional = true }
