[package]
name = "space-weather"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Space weather indices and parsers for aerospace applications (no_std)"
repository = "https://github.com/astroxide/space-weather"
categories = ["science", "aerospace", "parser-implementations"]
keywords = ["space-weather", "f10.7", "ap-index", "celestrak", "jb2008"]
readme = "README.md"

[lib]
crate-type = ["lib"]

[features]
default = []
std = []
fetch = ["dep:reqwest", "std"]
fetch-blocking = ["fetch", "reqwest/blocking"]
python = ["std", "dep:pyo3", "dep:numpy"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }
numpy = { version = "0.24", optional = true }

[[example]]
name = "parse_celestrak"
required-features = ["std"]

[[example]]
name = "fetch_and_query"
required-features = ["fetch-blocking"]
